<resources>
    <string name="app_name">LOnFO</string>
    <string name="lost">LOST</string>
    <string name="found">FOUND</string>
    <string name="login">LOGIN</string>
    <string name="reg">REGISTER</string>
    <string name="loginPage">LOGIN PAGE</string>
    <string name="registrationPage">REGISTRATION PAGE</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="REGISTERHERE">NEW? REGISTER HERE</string>
    <string name="term_condition">By Clicking on Login/Register, you are agreeing LOnFos term and condition and cookie policy </string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="fullname">FULLNAME</string>
    <string name="email">EMAIL</string>
    <string name="conf_pass">CONFIRM PASSWORD</string>
</resources>
