<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:background="@drawable/edittext_bottom_color"
        android:gravity="center_horizontal"
        android:text="@string/create_account"
        android:textColor="#FF461286"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/floatingfullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/floatingfullname"
        android:layout_width="220dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccount">

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:height="20dp"
            android:background="@drawable/edittext_bottom_color"
            android:drawableLeft="@drawable/ic_action_user"
            android:drawablePadding="1dp"
            android:elevation="7dp"
            android:ems="10"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:padding="2dp"
            android:textSize="16dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/floatingemail"
        android:layout_width="220dp"
        android:layout_height="43dp"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatingfullname">

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:height="20dp"
            android:background="@drawable/edittext_bottom_color"
            android:drawableLeft="@drawable/ic_action_email"
            android:drawablePadding="1dp"
            android:elevation="7dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:padding="2dp"
            android:textSize="16dp" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/floatingpass"
        android:layout_width="220dp"
        android:layout_height="43dp"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatingemail">

        <EditText
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:height="20dp"
            android:background="@drawable/edittext_bottom_color"
            android:drawableLeft="@drawable/ic_action_password"
            android:drawablePadding="1dp"
            android:elevation="7dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:padding="2dp"
            android:textSize="16dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/floatingconf_pass"
        android:layout_width="220dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatingpass">

        <EditText
            android:id="@+id/conf_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:height="20dp"
            android:background="@drawable/edittext_bottom_color"
            android:drawableLeft="@drawable/ic_action_password"
            android:drawablePadding="1dp"
            android:elevation="7dp"
            android:ems="10"
            android:hint="@string/conf_pass"
            android:inputType="textPersonName"
            android:padding="2dp"
            android:textSize="16dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/RegTabAct"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="52dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatingconf_pass">

        <TextView
            android:id="@+id/login_in_cardview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/reg"
            android:textColor="#fff"
            android:textSize="20sp" />
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>